--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -432,13 +432,20 @@ vertical-align:middle;
         text-align: center;
 }
 .index_content li{
-	padding: 10px;
-    background: #fff;
+	padding: 1px;
     margin: 5px;
 }
 .index_content li img{
     width: 100%;
 }
+.index_content li p{
+    position: relative;
+    top: -30px;
+    color: #fff;
+    padding-left: 5px;
+    height:0;
+}
+
 .index_nav {
     list-style: none;
     height: 45px;
