--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -525,6 +525,7 @@ vertical-align:middle;
 }
 .reg_head li{
     line-height: 40px;
+    background:rgb(239, 16, 16);
 }
 .reg_head li span{
     display: inline-block;
@@ -536,12 +537,14 @@ vertical-align:middle;
 .reg_head li span:nth-child(2){
     width: 80%;
     text-align: center;
+    color:#fff;
 }
 .block1{
-    margin: 50px 10px 0 10px;
+    margin: 15px 0px 0 0px;
+    background: #fff;
 }
 .block1 li{
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 .custom_input{
     height: 30px;
@@ -551,7 +554,7 @@ vertical-align:middle;
     padding-left: 5px;
 }
 .shell_input{
-    border: 1px solid #ccc;
+    
     width: 60%;
     float: left;
     margin-left: 5%
@@ -562,10 +565,12 @@ vertical-align:middle;
     text-align: center;
     line-height: 40px;
     color: #fff;
-    margin-left: 5%
+    margin-left: 5%;
+    border-radius: 6px;
 }
 .block2{
-    margin: 50px 10px 0 10px;
+    margin: 15px 0px 0 0px;
+    background: #fff;
 }
 .block2 li{
     margin-bottom: 10px;
@@ -579,7 +584,7 @@ vertical-align:middle;
     -o-transform:rotate(90deg); /* Opera */
 }
 .shell_common{
-    border:1px solid #ccc;width: 90%;margin-left: 5%
+    width: 90%;margin-left: 5%
 }
 .margin_bottom_10{
     margin-bottom: 10px;
