--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -552,6 +552,7 @@ vertical-align:middle;
     outline: 0 none;
     line-height: 30px;
     padding-left: 5px;
+    font-size:15px;
 }
 .shell_input{
     
