--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -352,12 +352,13 @@ vertical-align:middle;
     background: #fff;
     margin-left: 5%;
     display: none;
+    border-radius: 6px;
 }
 
 .forgender ul li {
-    border-bottom: 1px solid #E2DADA;
     line-height: 30px;
-    padding: 5px;
+    padding: 15px;
+    font-size: 20px;
 }
 
 .forphone {
@@ -367,12 +368,14 @@ vertical-align:middle;
     background: #fff;
     margin-left: 5%;
     display: none;
+    border-radius: 6px;
 }
 
 .forphone ul li {
-    border-bottom: 1px solid #E2DADA;
+    margin-bottom: 15px;
     line-height: 30px;
     padding: 5px;
+    font-size: 20px;
 }
 .forname {
     position: absolute;
@@ -381,12 +384,14 @@ vertical-align:middle;
     background: #fff;
     margin-left: 5%;
     display: none;
+    border-radius: 6px;
 }
 
 .forname ul li {
-    border-bottom: 1px solid #E2DADA;
+    margin-bottom: 15px;
     line-height: 30px;
     padding: 5px;
+    font-size: 20px;
 }
 .forsetpwd {
     position: absolute;
@@ -395,12 +400,14 @@ vertical-align:middle;
     background: #fff;
     margin-left: 5%;
     display: none;
+    border-radius: 6px;
 }
 
 .forsetpwd ul li {
-    border-bottom: 1px solid #E2DADA;
     line-height: 30px;
     padding: 5px;
+    font-size: 20px;
+    margin-bottom: 15px;
 }
 .mask {
     position: absolute;
@@ -408,10 +415,10 @@ vertical-align:middle;
     left: 0%;
     width: 100%;
     height: 100%;
-    background-color: #2D2C2C;
-    -moz-opacity: 0.7;
-    opacity: .70;
-    filter: alpha(opacity=70);
+    background-color: rgba(45, 44, 44, 0.48);
+    -moz-opacity: 0.3;
+    opacity: .30;
+    filter: alpha(opacity=30);
     display: none;
 }
 
@@ -530,8 +537,9 @@ vertical-align:middle;
     
 }
 .reg_head li{
-    line-height: 40px;
-    background:rgb(239, 16, 16);
+    line-height: 30px;
+    font-size: 22px;
+    padding: 10px;
 }
 .reg_head li span{
     display: inline-block;
