--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -258,12 +258,12 @@ vertical-align:middle;
     line-height: 40px;
 }
 .red_button{
-    background-color: rgb(255, 19, 19);
     color: #fff;
     padding: 3px;
     display: inline-block;
     width: 68%;
     line-height: 40px;
+    border-radius: 6px;
 }
 .blue_button{
     background-color: #2FB4CA;
