--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -437,8 +437,10 @@ vertical-align:middle;
 }
 
 .index_address{
-	background: #fff;
-        
+    background: #fff;
+    position: fixed;
+    z-index: 2;
+    width: 100%;        
 }
 .index_address li{
 	    line-height: 30px;
@@ -479,7 +481,10 @@ vertical-align:middle;
     text-align: center;
     width: 25%;
 }
-
+.dgou_content{
+    position: relative;
+    top: 50px;
+}
 .dgou_content li{
 	padding: 10px;
     background: #fff;
@@ -490,6 +495,9 @@ vertical-align:middle;
 }
 .dgou_head{
     background: #fff;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
 }
 .dgou_head li{
     line-height: 30px;
@@ -516,7 +524,8 @@ vertical-align:middle;
     width: 100%;
     background: #fff;
     color: #555;
-    border-top: 5px solid #F1F3F2;
+    position: relative;
+    top:50px;
     
 }
 
