--- a/static/css/public.css
+++ b/static/css/public.css
@@ -1,7 +1,7 @@
 ﻿/*
     公用样式
-*/
-* { margin: 0; padding: 0; -webkit-tap-highlight-color:rgba(255,255,255,0);}
+
+* { margin: 0; padding: 0; -webkit-tap-highlight-color:rgba(255,255,255,0);}*/
 li{
     list-style: none;
 }
@@ -17,6 +17,7 @@ em{
 }
 .i_top {
     position: relative;
+    top:50px;
     
 }
 .i_top ul{
