--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -305,9 +305,9 @@ vertical-align:middle;
 	margin-top: 15px;
 }
 .myinfo_body li{
-	padding: 5px;
+	padding: 5px 5px 5px 20px;
 	border-bottom: 1px solid #E2DADA;
-                  line-height: 34px;
+        line-height: 34px;
 }
 .myinfo_body li span{
     font-size: 15px;
@@ -357,7 +357,7 @@ vertical-align:middle;
 
 .forgender ul li {
     line-height: 30px;
-    padding: 15px;
+    padding: 5px;
     font-size: 20px;
 }
 
