modify:修改性别左内补为20px

--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -357,7 +357,7 @@ vertical-align:middle;
 
 .forgender ul li {
     line-height: 30px;
-    padding: 5px;
+    padding: 5px 5px 5px 20px;
     font-size: 20px;
 }
 
