--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -6,7 +6,7 @@
 body {
     background: #F1F3F2;
     font-family: inherit;
-    font-size: 15px;
+    font-size: 0.75rem;
 }
 
 a {
@@ -31,7 +31,7 @@ ul {
 
 .nav li {
     float: left;
-    width: 20%;
+    width: 49%;
     background: #fff;
     text-align: center;
     line-height: 50px;
@@ -75,9 +75,9 @@ ul {
     list-style: none;
     background: #fff;
     width: 100%;
-    height: 100px;
+    height: 6rem;
     position: fixed;
-    top: 0px;
+    top: 2.2rem;
     z-index: 99;
 }
 
@@ -91,14 +91,13 @@ ul {
 
 .s-time {
     list-style: none;
-    height: 45px;
-    line-height: 45px;
+    line-height: 2.25rem;
     width: 100%;
     background: #fff;
     color: #555;
     position: fixed;
-    top: 100px;
-    border-top: 5px solid #F1F3F2;
+    top: 8.2rem;
+    border-top: 0.25rem solid #F1F3F2;
     z-index: 99;
 }
 
@@ -119,7 +118,7 @@ ul {
 .nav_c {
     list-style: none;
     position: relative;
-    top: 150px;
+    top: 7.5rem;
 }
 
 .nav_c li {
@@ -139,7 +138,7 @@ ul {
 .nav_content {
     list-style: none;
     position: relative;
-    top: 160px;
+    top: 8.5rem;
     background: #fff;
     height: 80%;
 }
@@ -151,7 +150,7 @@ ul {
 .nav_comment {
     list-style: none;
     position: relative;
-    top: 160px;
+    top: 8.1rem;
     background: #fff;
 }
 
