--- a/static/css/apm.css
+++ b/static/css/apm.css
@@ -75,7 +75,7 @@ ul {
     list-style: none;
     background: #fff;
     width: 100%;
-    height: 6rem;
+    height: 10rem;
     position: fixed;
     top: 2.2rem;
     z-index: 99;
@@ -96,7 +96,7 @@ ul {
     background: #fff;
     color: #555;
     position: fixed;
-    top: 8.2rem;
+    top: 12.2rem;
     border-top: 0.25rem solid #F1F3F2;
     z-index: 99;
 }
@@ -118,7 +118,7 @@ ul {
 .nav_c {
     list-style: none;
     position: relative;
-    top: 7.5rem;
+    top: 12.5rem;
 }
 
 .nav_c li {
@@ -253,7 +253,7 @@ vertical-align:middle;
     color: #fff;
     padding: 3px;
     display: inline-block;
-    width: 98%;
+    /*width: 98%;*/
     line-height: 40px;
 }
 .red_button{
@@ -451,18 +451,20 @@ vertical-align:middle;
     
 }
 .index_content li{
-	padding: 1px;
-    margin: 5px;
+	padding: 0.05rem;
+    margin: 0 auto;
+    position: relative;
+    width: 18rem;
 }
 .index_content li img{
     width: 100%;
 }
 .index_content li p{
-    position: relative;
-    top: -30px;
+    position: absolute;
+    top: 8rem;
     color: #fff;
-    padding-left: 5px;
-    height:0;
+    padding-left: 0.25rem;
+    height: 0;
 }
 
 .index_nav {
